# allstar

./: .gitignore  LICENSE  pyproject.toml  readme.md
allstar/: __init__.py  allstar.py  star.py
tests/: star.py
