[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allstar"
version = "1.1.5"
authors = [
  { name="Virtual Items", email="virtualitemsuniverse@gmail.com" },
]
description = "A Python manager for the modules __all__ variable."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/virtualitems/allstar"
"Bug Tracker" = "https://github.com/virtualitems/allstar/issues"
